# Platformer_Game

./: .clangd  CMakeLists.txt
.cache/clangd/index/: Animation.h.55BBC10F11608E56.idx  AnimationLoader.h.8A0B11833C657A4D.idx  AnimationLoader.h.8C17E2CF856E5120.idx  AnimationLoader.h.8D68141B4B5165A0.idx  AnimationManager.h.6DA2C9B1A28744CE.idx  AnimationSystems.h.02D7EA75309F9186.idx  AnimationSystems.h.EC923B65C3389006.idx  Character.h.AC5B3925CE50CE48.idx  CollisionSystem.h.569B14E44AFB9121.idx  CollisionSystem.h.75F1A19F9CE11535.idx  CollisionSystem.h.F45208BEDCCDFB94.idx  Components.h.9CAA6034586428A7.idx  Components.h.BE1A51B8E2C00804.idx  Components.h.E3DF0FADBBCD0964.idx  DashSystem.h.9B66D2FFAE6EF47F.idx  DashSystem.h.E16E15D75C9B07CF.idx  Entity.h.CB8C9A8A29D1810E.idx  Entity.h.FAB6E53580C6AB76.idx  GameManager.h.5589E2659F6067DE.idx  GameManager.h.E6655B551F8AAFC8.idx  GroundCheckSystem.h.37B66A3EC41A8935.idx  GroundCheckSystem.h.8FCD869B0D69794A.idx  InputSystem.h.7522F7ACC52464E9.idx  InputSystem.h.966D940434155B30.idx  InputSystem.h.C38E3CFA522BCD45.idx  JumpSystem.h.158911893AA31412.idx  JumpSystem.h.CB0102E1408F5574.idx  MovementSystem.h.5115A2D3B4C8EB95.idx  MovementSystem.h.D32476B990B807C6.idx  MovementSystem.h.D6E4863277B0F2DF.idx  Platform.h.2E9F6F7AD2B4ED13.idx  Player.h.20F9081D0B44B3AE.idx  RenderSystem.h.1E4C9A830E20E0A2.idx  RenderSystem.h.306100005E415109.idx  RenderSystem.h.B5B96F4EB8B98033.idx  abi_macros.hpp.D871CA137E2286F0.idx  adl_serializer.hpp.834F5B7F996AF6DC.idx  begin.hpp.7D6BFC877B5018E4.idx  binary_reader.hpp.19A30621D6E97919.idx  binary_writer.hpp.90DE83529BEFF842.idx  (+44 more)
assets/Animations/: player.yaml
assets/Data/: animations.json
include/: Character.h  CollisionSystem.h  Components.h  Entity.h  GameManager.h  InputSystem.h  MovementSystem.h  Platform.h  RenderSystem.h
include/Components/: Components.h
include/Systems/: AnimationLoader.h  AnimationSystems.h  CollisionSystem.h  DashSystem.h  GroundCheckSystem.h  InputSystem.h  JumpSystem.h  MovementSystem.h  RenderSystem.h
src/: main.cpp
